--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,12 +54,14 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind C-l send-keys 'C-l'
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-bind-key - split-window -v  -c '#{pane_current_path}'
-bind-key \ split-window -h  -c '#{pane_current_path}'
+bind-key - split-window -v -c '#{pane_current_path}'
+bind-key \ split-window -h -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind-key b break-pane -d
 
 setw -g mode-keys vi
+bind C-[ copy-mode
+set-option escape-time 0
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "xsel -i -b"
 unbind -t vi-copy Enter
