--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,6 +58,7 @@ bind-key - split-window -v -c '#{pane_current_path}'
 bind-key \ split-window -h -c '#{pane_current_path}'
 bind c new-window -c '#{pane_current_path}'
 bind-key b break-pane -d
+bind C-j split-window -l 6 -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
 
 setw -g mode-keys vi
 bind C-[ copy-mode
